--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-	<html>
-	<head>
-		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous'>
-		<title>Home Page</title>
-	</head>
-	<body>
-		<h1>HOME</h1>
-		<h1><a href='/two'>TWO</a></h1>
-	</body>
+<html>
+    <head>
+    	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u' crossorigin='anonymous'>
+    	<title>HOME</title>
+    	<style type="text/css">
+
+    	.jumbotron {
+    		text-align: center;
+    	}
+
+    	</style>
+    </head>
+    <body>
+    	<div class='container'>
+    		<div class="jumbotron">
+    			<h1>HOME</h1>
+    		</div>
+    		<div class='col-md-8 col-md-offset-2'>
+    			<ul>
+    				<li><a href="/create_post">CREATE POST</a></li>
+    				<li><a href="/new_post">VIEW POSTS</a></li>
+    			</ul>
+    		</div>
+    	</div>
+    </body>
 </html>
